--- a/Assets/Documents/app.html
+++ b/Assets/Documents/app.html
@@ -25,6 +25,7 @@
         </div>
       </div>
     </div>
+    <!-- header  -->
     <header>
       <div class="left-logo"><img src="./Picture/hdr-logo.png" alt="" /></div>
       <div class="middle">
@@ -40,7 +41,7 @@
       <div class="right">
         <div class="right-i">(239)-543-217-0108</div>
         <div class="right-ii">
-          <img src="./Picture/2nd-hdr-rght.png" alt="" />
+          <img src="./Picture/Facebook Cover.png" alt="" />
         </div>
         <div class="right-iii">
           <a href=""><button>Request A Pickup</button></a>
@@ -50,7 +51,7 @@
     <!-- container-i starts here  -->
     <div class="container-i">
       <div class="container-i-itms">
-        <div class="lft-content-i">waste Pickup</div>
+        <div class="lft-content-i">Nayem Sarkar</div>
         <div class="lft-content-ii">
           Your Waste <br />
           Pickup Solutions
@@ -64,7 +65,7 @@
         </div>
       </div>
       <div class="conainer-i-rght">
-        <img src="./Picture/banner-img-1.png.png" alt="" />
+        <img src="./Picture/Facebook Cover.png" alt="" />
       </div>
     </div>
     <!-- container-i ends here  -->
