--- a/Assets/Documents/app.html
+++ b/Assets/Documents/app.html
@@ -64,8 +64,9 @@
           <a href=""><button>Read more</button></a>
         </div>
       </div>
+      <!-- right side img  -->
       <div class="conainer-i-rght">
-        <img src="./Picture/Facebook Cover.png" alt="" />
+        <img src="./Picture/Capture.PNG" alt="" />
       </div>
     </div>
     <!-- container-i ends here  -->
@@ -323,5 +324,8 @@ We collect, <br>recycle @ disposal <br>all materials
   <div class="vii-ii">Copyright 2023 by wastix template All Right Reserved.</div>
  </div>
        <!-- seventh container ends here  -->
+       <!-- js part  -->
+       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js" integrity="sha512-16esztaSRplJROstbIIdwX3N97V1+pZvV33ABoG1H2OyTttBxEGkTsoIVsiP1iaTtM8b3+hu2kB6pQ4Clr5yug==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+       <script src="./Script.js"></script>
   </body>
 </html>
