--- a/Assets/Documents/app.html
+++ b/Assets/Documents/app.html
@@ -58,7 +58,7 @@
         </div>
         <div class="lft-content-iii">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. <br />
-          Obcaecati, libero.
+          Obcaecati, liberoi.
         </div>
         <div class="left-content-iv">
           <a href=""><button>Read more</button></a>
